<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_horizontal_small"
    android:layout_marginEnd="@dimen/margin_horizontal_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/width_program_item"
        android:layout_height="@dimen/height_program_item"
        android:background="@color/black">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_line_on_top_of_program"
            android:layout_gravity="center|top"
            android:background="@color/grey_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_program_status"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/margin_vertical_small"
            android:layout_marginTop="@dimen/margin_vertical_very_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/outline_restore_white_18"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_program_starting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_small"
            android:text="@string/holder_date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/img_program_status"
            app:layout_constraintStart_toEndOf="@+id/img_program_status"
            app:layout_constraintTop_toTopOf="@+id/img_program_status" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_img_program_item"
            android:layout_marginTop="@dimen/margin_vertical_very_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_program_status">

            <ImageView
                android:id="@+id/img_program"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_program_agreement_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginTop="@dimen/margin_horizontal_small"
                android:layout_marginEnd="@dimen/margin_vertical_small"
                android:background="@color/white_transparent"
                android:text="@string/holder_age"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_program_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:text="@string/holder_program_description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/tv_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_country_and_year_of_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small"
            android:text="@string/holder_country_and_year_of_production"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:text="@string/holder_genre"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/tv_country_and_year_of_production"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>