<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_program"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/grey_dark"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="@dimen/width_program_item"
        android:layout_height="@dimen/height_program_item"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_program_status"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_vertical_small"
                    app:srcCompat="@drawable/outline_restore_white_16"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_program_starting_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_horizontal_small"
                    android:text="@string/holder_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <View
                android:id="@+id/view_program_current_progress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line_on_top_of_program"
                android:layout_gravity="center|top"
                android:background="@color/grey_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_image_program"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_img_program_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_program_status">

            <ImageView
                android:id="@+id/img_program"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_light"
                android:src="@drawable/old_tv_white_256"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_program_agreement_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginTop="@dimen/margin_horizontal_small"
                android:layout_marginEnd="@dimen/margin_vertical_small"
                android:background="@color/grey_transparent"
                android:text="@string/holder_age"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linear_program_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_image_program">

            <TextView
                android:id="@+id/tv_program_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@string/holder_program_description"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toTopOf="@+id/tv_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@string/holder_genre"
                android:textColor="@color/grey_light"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toTopOf="@+id/tv_country_and_year_of_production"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_program_name" />

            <TextView
                android:id="@+id/tv_country_and_year_of_production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_small"
                android:text="@string/holder_country_and_year_of_production"
                android:textColor="@color/grey_light"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>